--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1665,3 +1665,217 @@ input {
   flex: 1 0;
   margin-left: 5%;
 }
+
+/* NEWS PAGE */
+.news__container {
+  padding: 1rem 0;
+  align-items: flex-start;
+}
+
+.news__main {
+  display: flex;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+  flex : 1 0;
+}
+
+.news__main-item {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  position: relative;
+  border: 1px solid #ddd;
+  -webkit-box-shadow: 0px 1px 0px 0px rgba(221,221,221,1);
+-moz-box-shadow: 0px 1px 0px 0px rgba(221,221,221,1);
+box-shadow: 0px 1px 0px 0px rgba(221,221,221,1);
+  transition: box-shadow 0.2s ease-out;
+}
+
+.news__main-item:hover {
+  -webkit-box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
+-moz-box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
+box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
+}
+
+.is-divider-news {
+  margin: .25rem 0;
+}
+
+.item__header {
+ width: 100%;
+}
+
+.item__header img {
+  width: 100%;
+  height: fit-content;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+
+.item__text {
+  padding: 1.25rem 1rem;
+  padding-top: .25rem;
+  padding-right: 1.5rem;
+}
+
+.item__text-date {
+  border: 2px solid var(--black-color);
+  padding: 0 .5rem;
+  height: 2.8em;
+  width: 2.8em;
+  line-height: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 10%;
+  background-color: var(--white-color);
+  left: -2%;
+  transition: all .25s;
+}
+
+.news__main-item:hover .item__text-date {
+  background-color: var(--black-color);
+}
+
+.news__main-item:hover .item__text-date * {
+  color: var(--white-color);
+}
+
+.item__text-date_day, .item__text-date_month {
+  color: var(--black-color);
+  text-align: center;
+  font-weight: var(--font-semi-bold);
+}
+
+.item__text-date_month {
+  font-size: 12px ;
+}
+
+.item__text-title a {
+  font-weight: var(--font-semi-bold);
+  color: var(--black-color);
+  font-size: 16px;
+}
+
+.item__text-title a:after {
+  content: " ";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.item__text-description {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+  color: rgb(88, 88, 88);
+  font-size: var(--small-font-size);
+  font-size: 14px;
+}
+
+.news__main-item:hover .item__text-description {
+  color: var(--title-product);
+}
+
+.news__sidebar {
+  width: 20%;
+  margin-bottom: auto;
+  flex-shrink: 1;
+}
+
+.news-search form {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.news-search form input {
+  border: 1px solid #ddd;
+  padding: 0 .5rem;
+  font-size: 14px;
+  padding-top: 0;
+  padding-bottom: 0;
+  flex: 1 0;
+}
+
+.news-search form input:focus {
+  -webkit-box-shadow: 0px 0px 9px 1px rgba(201,199,201,.8);
+-moz-box-shadow: 0px 0px 9px 1px rgba(201, 199, 201, 0.8);
+box-shadow: 0px 0px 9px 1px rgba(201,199,201,.8);
+
+}
+
+.news-search form button {
+  padding: 0 1rem;
+  border-radius: 0;
+  flex: 0;
+  background-color: #2d4848;
+  color: var(--white-color);
+  font-size: 24px;
+}
+
+.news-search form button:hover {
+  filter: brightness(.7);
+}
+
+.new-lasted-news-list h3 {
+  padding: 1rem 0;
+}
+
+.new-lasted-news-content {
+  border: 1px solid #ddd;
+}
+
+.new-lasted-item {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+  padding: .75rem 0;
+}
+
+.new-lasted-title {
+  padding-left: 1.5rem;
+  line-height: 1rem;
+  color: #333;
+  font-size: 14px;
+}
+
+.new-lasted-item-image {
+  background-repeat: no-repeat;
+  position: relative;
+  background-position: center center;
+  background-size: cover;
+  border: 0;
+  left: 5%;
+}
+
+.new-lasted-item-image::before{
+  content: " ";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #353535;
+  opacity: .6;
+  z-index: 0;
+}
+
+.new-lasted-item-image * {
+  color: var(--white-color);
+  z-index: 1;
+}
+
+@media screen and (max-width : 768px) {
+  .news__main {
+    flex-direction: column;
+  }
+  .news__main-item {
+    width: 100%;
+  }
+}
