--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,7 +267,6 @@ input {
   /* font-size: 15px; */
 }
 
-
 .nav__link:hover,
 .social__icon:hover {
   color: var(--text-color);
@@ -958,7 +957,7 @@ input {
 
 .comment__user-avatar img {
   width: fit-content;
-  height:100%;
+  height: 100%;
 }
 
 .comment__user-name {
@@ -994,12 +993,12 @@ input {
   border-bottom: 1px solid #ddd;
   color: rgba(102, 102, 102, 0.85);
   border-radius: 0;
-  transition: all .5s;
-
+  transition: all 0.5s;
 }
 
 .tab button:hover {
-  color: rgba(17, 17, 17, 0.85);}
+  color: rgba(17, 17, 17, 0.85);
+}
 
 .tab button.active {
   background-color: var(--body-color);
@@ -1030,8 +1029,12 @@ input {
 }
 
 @keyframes fadeEffect {
-  from {opacity: 0;}
-  to {opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .tabcontent .container {
@@ -1039,7 +1042,6 @@ input {
   border-top: 0;
   max-height: 600px;
   overflow-y: auto;
-
 }
 
 /* Related Product */
@@ -1505,7 +1507,7 @@ input {
 }
 
 .description___container-content {
-  border-bottom: 1px #acacac solid ;
+  border-bottom: 1px #acacac solid;
   margin-bottom: 1rem;
 }
 
@@ -1514,7 +1516,7 @@ input {
 }
 
 .description__container-companysize {
-  padding-bottom: 2rem ;
+  padding-bottom: 2rem;
   text-align: center;
 }
 
@@ -1530,13 +1532,12 @@ input {
 
 .description__container-companysize_content--text {
   margin-right: 2rem;
-  padding: .5rem .25rem;
+  padding: 0.5rem 0.25rem;
   background-color: #ddd;
 }
 
 .description__container-companysize_content--text p {
-  padding: .2rem 0;
-
+  padding: 0.2rem 0;
 }
 
 .description__container-companysize_content--text p i {
@@ -1546,7 +1547,6 @@ input {
 .description__container-companysize_content--img {
   width: 50%;
 }
-
 
 .description__container-item {
   display: flex;
@@ -1599,14 +1599,13 @@ input {
 }
 
 .contact__container-title small {
-  
   font-size: var(--small-font-size);
 }
 
 .contact__content {
   display: flex;
   justify-content: space-between;
-  align-items:flex-start;
+  align-items: flex-start;
 }
 
 .contact__form {
@@ -1619,7 +1618,8 @@ input {
   gap: 1rem 0;
 }
 
-.contact__form form input,textarea {
+.contact__form form input,
+textarea {
   border: 1px solid #ddd;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1627,7 +1627,7 @@ input {
 }
 
 .contact__form form textarea {
-  padding: 1rem ;
+  padding: 1rem;
 }
 
 .contact__form form textarea::placeholder {
@@ -1649,7 +1649,7 @@ input {
   align-items: center;
   justify-content: center;
   border: 2px solid var(--black-color);
-  transition: all .2s ;
+  transition: all 0.2s;
 }
 
 .contact__form form button:hover {
@@ -1658,7 +1658,7 @@ input {
 }
 
 .contact__form form button:active {
-  transform: scale(.98);
+  transform: scale(0.98);
 }
 
 .contact__address {
@@ -1676,7 +1676,7 @@ input {
   display: flex;
   gap: 1.5rem;
   flex-wrap: wrap;
-  flex : 1 0;
+  flex: 1 0;
 }
 
 .news__main-item {
@@ -1685,24 +1685,24 @@ input {
   width: 30%;
   position: relative;
   border: 1px solid #ddd;
-  -webkit-box-shadow: 0px 1px 0px 0px rgba(221,221,221,1);
--moz-box-shadow: 0px 1px 0px 0px rgba(221,221,221,1);
-box-shadow: 0px 1px 0px 0px rgba(221,221,221,1);
+  -webkit-box-shadow: 0px 1px 0px 0px rgba(221, 221, 221, 1);
+  -moz-box-shadow: 0px 1px 0px 0px rgba(221, 221, 221, 1);
+  box-shadow: 0px 1px 0px 0px rgba(221, 221, 221, 1);
   transition: box-shadow 0.2s ease-out;
 }
 
 .news__main-item:hover {
-  -webkit-box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
--moz-box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
-box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
+  -webkit-box-shadow: 0px 5px 14px 0px rgba(201, 199, 201, 1);
+  -moz-box-shadow: 0px 5px 14px 0px rgba(201, 199, 201, 1);
+  box-shadow: 0px 5px 14px 0px rgba(201, 199, 201, 1);
 }
 
 .is-divider-news {
-  margin: .25rem 0;
+  margin: 0.25rem 0;
 }
 
 .item__header {
- width: 100%;
+  width: 100%;
 }
 
 .item__header img {
@@ -1714,13 +1714,13 @@ box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
 
 .item__text {
   padding: 1.25rem 1rem;
-  padding-top: .25rem;
+  padding-top: 0.25rem;
   padding-right: 1.5rem;
 }
 
 .item__text-date {
   border: 2px solid var(--black-color);
-  padding: 0 .5rem;
+  padding: 0 0.5rem;
   height: 2.8em;
   width: 2.8em;
   line-height: 1rem;
@@ -1732,7 +1732,7 @@ box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
   top: 10%;
   background-color: var(--white-color);
   left: -2%;
-  transition: all .25s;
+  transition: all 0.25s;
 }
 
 .news__main-item:hover .item__text-date {
@@ -1743,14 +1743,15 @@ box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
   color: var(--white-color);
 }
 
-.item__text-date_day, .item__text-date_month {
+.item__text-date_day,
+.item__text-date_month {
   color: var(--black-color);
   text-align: center;
   font-weight: var(--font-semi-bold);
 }
 
 .item__text-date_month {
-  font-size: 12px ;
+  font-size: 12px;
 }
 
 .item__text-title a {
@@ -1772,7 +1773,7 @@ box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
 .item__text-description {
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;  
+  -webkit-box-orient: vertical;
   overflow: hidden;
   color: rgb(88, 88, 88);
   font-size: var(--small-font-size);
@@ -1796,7 +1797,7 @@ box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
 
 .news-search form input {
   border: 1px solid #ddd;
-  padding: 0 .5rem;
+  padding: 0 0.5rem;
   font-size: 14px;
   padding-top: 0;
   padding-bottom: 0;
@@ -1804,10 +1805,9 @@ box-shadow: 0px 5px 14px 0px rgba(201,199,201,1);
 }
 
 .news-search form input:focus {
-  -webkit-box-shadow: 0px 0px 9px 1px rgba(201,199,201,.8);
--moz-box-shadow: 0px 0px 9px 1px rgba(201, 199, 201, 0.8);
-box-shadow: 0px 0px 9px 1px rgba(201,199,201,.8);
-
+  -webkit-box-shadow: 0px 0px 9px 1px rgba(201, 199, 201, 0.8);
+  -moz-box-shadow: 0px 0px 9px 1px rgba(201, 199, 201, 0.8);
+  box-shadow: 0px 0px 9px 1px rgba(201, 199, 201, 0.8);
 }
 
 .news-search form button {
@@ -1820,7 +1820,7 @@ box-shadow: 0px 0px 9px 1px rgba(201,199,201,.8);
 }
 
 .news-search form button:hover {
-  filter: brightness(.7);
+  filter: brightness(0.7);
 }
 
 .new-lasted-news-list h3 {
@@ -1835,7 +1835,7 @@ box-shadow: 0px 0px 9px 1px rgba(201,199,201,.8);
   display: flex;
   align-items: center;
   border-bottom: 1px solid #ddd;
-  padding: .75rem 0;
+  padding: 0.75rem 0;
 }
 
 .new-lasted-title {
@@ -1854,7 +1854,7 @@ box-shadow: 0px 0px 9px 1px rgba(201,199,201,.8);
   left: 5%;
 }
 
-.new-lasted-item-image::before{
+.new-lasted-item-image::before {
   content: " ";
   position: absolute;
   width: 100%;
@@ -1862,7 +1862,7 @@ box-shadow: 0px 0px 9px 1px rgba(201,199,201,.8);
   left: 0;
   top: 0;
   background-color: #353535;
-  opacity: .6;
+  opacity: 0.6;
   z-index: 0;
 }
 
@@ -1871,11 +1871,31 @@ box-shadow: 0px 0px 9px 1px rgba(201,199,201,.8);
   z-index: 1;
 }
 
-@media screen and (max-width : 768px) {
+@media screen and (max-width: 768px) {
   .news__main {
     flex-direction: column;
   }
   .news__main-item {
     width: 100%;
   }
+}
+
+/* PAYMENT PAGE */
+.paymetn-content {
+  position: relative;
+}
+
+.payment-btn {
+  width: 40% !important;
+  /* position: absolute;
+  bottom: -10%;
+  left: 0;right: 0; */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.payment-details {
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(221, 221, 221, 1);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(221, 221, 221, 1);
+  box-shadow: 0px 0px 5px 2px rgba(221, 221, 221, 1);
 }
