--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1899,3 +1899,38 @@ textarea {
   -moz-box-shadow: 0px 0px 5px 2px rgba(221, 221, 221, 1);
   box-shadow: 0px 0px 5px 2px rgba(221, 221, 221, 1);
 }
+
+/* ORDER RECEIVED PAGE */
+.order-content {
+  gap: 2.5rem;
+  align-items:center;
+}
+
+.order-details {
+  border: none;
+  box-shadow: none;
+  padding: 1rem 2rem;
+  margin-left: 0;
+}
+
+.completed-order {
+  border: 1px solid #ddd;
+  padding: 1rem 2rem;
+  width: 40%;
+  margin-bottom: 5%;
+  background-color: #FAFAFA;
+  -webkit-box-shadow: 0px 3px 11px 0px rgba(221,221,221,1);
+-moz-box-shadow: 0px 3px 11px 0px rgba(221,221,221,1);
+box-shadow: 0px 3px 11px 0px rgba(221,221,221,1);
+}
+
+.completed-order p {
+  color: #23adad;
+  font-size: 20px;
+  margin-bottom: 1rem;
+}
+
+.completed-order ul {
+  list-style-type: disc;
+  padding-left: 3%;
+}
