--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -545,8 +545,8 @@ input {
   font-size: var(--font-medium);
   color: var(--white-color);
   position: absolute;
-  top: 20px;
-  right: 25px;
+  top: 5%;
+  right: 5%;
   background-color: var(--text-color);
   padding: 1px 5px;
   border-radius: 5px;
@@ -2074,5 +2074,22 @@ box-shadow: 0px 0px 7px 4px rgba(221,221,221,1);
   opacity: .6;
     font-weight: normal;
     margin-right: 0.3em;
-    font-size: var(--small-font-size)
+    font-size: var(--smaller-font-size);
+}
+
+.product__view {
+  color: #333;
+  display: flex;
+  align-items: center;
+  font-size: var(--small-font-size);
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  padding-left: 5%;
+}
+
+.product__view i {
+  position: absolute;
+  left: 0;
+  bottom: 10%;
 }
