--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1493,9 +1493,13 @@ input {
 }
 
 .profile__error {
+  color: crimson;
+  padding-bottom: 5px;
+}
+
+.form__error {
   padding-left: 16.5%;
   padding-right: 35%;
-  color: crimson;
   max-width: 785px;
 }
 
