--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -758,6 +758,12 @@ button {
   transform: scale(1.1);
 }
 
+.product-page__price-sale {
+  opacity: .6;
+    font-weight: normal;
+    margin-right: .75rem;
+}
+
 .product__info {
   display: flex;
   flex-direction: column;
@@ -830,7 +836,7 @@ input {
   height: 3px;
   display: block;
   background-color: rgba(0, 0, 0, 0.1);
-  margin: 1em 0 1em;
+  margin: .5rem 0 .5rem;
   width: 100%;
   max-width: 30px;
 }
@@ -1511,6 +1517,12 @@ input {
   margin: 0 auto;
 }
 
+.description__container-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .description__container-title .sidebar-title {
   display: flex;
   justify-content: center;
@@ -1522,6 +1534,7 @@ input {
 .is-divider-description__container {
   margin: 0 auto;
   max-width: 50px;
+  transform: translateX(-5px);
 }
 
 .description__container-banner {
@@ -2105,6 +2118,7 @@ box-shadow: 0px 0px 7px 4px rgba(221,221,221,1);
     margin-right: 0.3em;
     font-size: var(--smaller-font-size);
 }
+
 
 .product__view {
   color: #333;
