--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 /* ================VARIABLES CSS */
 :root {
-  --header-height: 5rem;
+  --header-height: 5.25rem;
   /* ==============COLOR============ */
   /* Change color to match the img*/
   --hue-color: 211;
@@ -208,6 +208,12 @@ input {
   color: var(--white-color);
 }
 
+.nav__logo-img {
+  max-width: 150px;
+  margin-top: .5rem;
+  /* padding-bottom: 1rem; */
+}
+
 .nav__logo {
   font-weight: var(--font-semi-bold);
   font-size: var(--h1-font-size);
@@ -264,7 +270,7 @@ input {
   color: var(--text-color-light);
   font-weight: var(--font-semi-bold);
   text-transform: uppercase;
-  /* font-size: 15px; */
+  font-size: 17px;
 }
 
 .nav__link:hover,
@@ -415,13 +421,11 @@ input {
 /* change background */
 .scroll-header {
   background-color: var(--black-color);
-  box-shadow: 0 0 4px hsla(var(--hue-color), 64%, 15%, 0.15);
+  -webkit-box-shadow: 0px 2px 7px 0px rgba(51,51,51,1);
+-moz-box-shadow: 0px 2px 7px 0px rgba(51,51,51,1);
+box-shadow: 0px 2px 7px 0px rgba(51,51,51,1);
 }
 
-.scroll-header .nav__logo {
-  color: var(--white-color);
-  font-size: var(--h2-font-size);
-}
 /* SLIDE */
 .header__banner {
   margin-top: -100px;
@@ -568,6 +572,16 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  position: relative;
+}
+
+.news__content .news__title:after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 80%;
+  top: 0;
+  left: 0;
 }
 
 .news__content-img {
@@ -581,6 +595,7 @@ input {
   color: var(--black-color);
   margin: var(--mb-0-25) 0;
 }
+
 
 .news__description {
   font-size: var(--small-font-size);
