--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,19 +230,6 @@ input {
   width: 55%;
 }
 
-@media screen and (max-width: 767px) {
-  .nav__menu {
-    position: fixed;
-    background-color: var(--body-color);
-    top: 0;
-    right: -100%;
-    width: 70%;
-    height: 100%;
-    box-shadow: -1px 0 4px hsla(var(--hue-color), 64%, 15%, 0.15);
-    padding: 3rem;
-    transition: 0.4s;
-  }
-}
 
 .nav__list,
 .nav__social-icon {
@@ -2151,3 +2138,58 @@ box-shadow: 0px 0px 7px 4px rgba(221,221,221,1);
   left: 0;
   bottom: 10%;
 }
+
+/* RESPONSIVE */
+
+#menu-hidden-btn {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  /* .nav__menu , .nav__social {
+    display: none;
+  } */
+  #menu-hidden-btn {
+    display: block;
+  }
+
+  .nav__menu {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #000;
+    width: 100%;
+    padding-right: .8rem;
+    display: none;
+  }
+
+  .nav__menu-block {
+    display: block;
+  }
+
+  .nav__social {
+    position: absolute;
+    right: 0;
+    padding-right: 1rem;
+  }
+
+  .social__item {
+    text-align: right;
+  }
+
+  .nav__logo {
+    margin-right: auto;
+  }
+
+  .nav__list {
+    display: block;
+    text-align: right;
+  }
+}
+
+@media screen and (max-width: 1286px) {
+  .nav__link, .social__icon {
+    font-size: 12px;
+  }
+}
+
